# PyTRobot

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  Pipfile  README.md  __init__.py  config.py  cookiecutter.json  framework.py  main.py  pilot.conf  playbook.yml  pyproject.toml  requirements.txt  run.sh  setup.py  tasks.py
Template/: .gitignore  main.py  requirements.txt
Template/data/: OPS-assets.json
Template/modules/: make_jenkins.py  make_sqs.py  make_subprocess.py
archive/celery/: celery.py  message_builder.py
archive/celery/celery_scaffold/: test_new_task.py
data/: assets.json  params.json
deprecated/: old_task  setup.py
docs/: delivery.jenkinsfile  launch.jenkinsfile  sqs_strategy.md  thread_vs_subprocess.md
modules/: __init__.py  make_control.py  make_jenkins.py  make_settings.py  make_sqs.py  make_subprocess.py
poc/: with_redirector.py
pytrobot/: __init__.py  __main__.py  common.py  debug.py  dispatcher.py  finisher.py  handler.py  main.py  performer.py  robot.py  starter.py  state.py  tasks.py  user_functions.py  utils.py
pytrobot/cli/: __main__.py  aws_env_setup.py  main.py  project_manager.py  tasks.py
pytrobot/core/: __init__.py  __main__.py  assets.py  celery_layer.py  dataset_layer.py  decorators.py  machine_layer.py  multithread_feature.py  object_layer.py  objects_layer.py  queue_layer.py  singleton.py  state_layer.py  states.py  subprocess_feature.py  transitions.py  true_table.py  utils.py
pytrobot/core/actions/: base_action.py
pytrobot/core/data/: __init__.py  config_data.py  transaction_data.py
pytrobot/core/decortador/: celery.py  config.py  log.py  multithread.py  orchestrator.py  queue.py  sqs.py  state.py  subprocess.py
pytrobot/core/feature/: aws.py  config.py  logging.py  multithread.py  subprocess.py  table.py  transaction_data.py
pytrobot/core/states/: __init__.py  base_state.py  finisher_state.py  starter.py  starter_state.py
pytrobot/core/strategy/: application_strategy.py  base_registry.py  orchestrator_strategy.py  robot_strategy.py  state_strategy.py
pytrobot/core/strategy/celery/: base_task.py  celery_manager.py  concrete.py  task_registry.py
pytrobot/core/strategy/orchestrator/: base_worker.py  celery_manager.py  concrete.py
pytrobot/core/strategy/queue/: base_task.py  concrete.py  queue_manager.py
pytrobot/core/strategy/sqs/: base_task.py  manager.py  message_builder.py  registry.py  sqs_manager.py  sqs_strategy.py  strategy.py
pytrobot/core/strategy/state/: base_state.py  concrete.py  machine.py  manager.py  private_states.py  state_machine.py  state_manager.py  state_registry.py  strategy.py  true_table.py
pytrobot/core/tools/: base_tool.py
pytrobot/core/utility/: common.py  config.py  log.py
pytrobot/framework/: __init__.py  __main__.py  assets.py  dispatcher.py  finisher.py  handler.py  performer.py  robot.py  starter.py  state.py  transaction.py  user_functions.py
pytrobot/mock/: __init__.py
pytrobot/scaffold/: Dockerfile
pytrobot/scaffold/celery/: __init__.py  new_worker.py  test_new_worker.py
pytrobot/scaffold/celery/new_project/: README.md
pytrobot/scaffold/project/: cookiecutter.json
pytrobot/scaffold/resources/: .config  config.py
pytrobot/scaffold/sqs/: new_task.py
pytrobot/scaffold/src/: __init__.py  finisher_state.py  sample_state.py  starter_state.py
pytrobot/scaffold/state/: __init__.py  cookiecutter.json  new_state.py  test_{{cookiecutter.class_name}}_state.py
pytrobot/scaffold/state/new_project/: pyproject.toml
pytrobot/scaffold/state/new_project/new_project/src/: hungry.py  order_pizza.py  pizza.py
pytrobot/scaffold/tests/: test_actions.py  test_state.py  test_states.py  test_tools.py
pytrobot/scaffold/{{cookiecutter.project_name}}_bot/: Dockerfile  debug.py
src/Data/: Certidoes.csv  Diligencia.xlsx
src/functional_tests/: test.py
src/utils/: BuscaGeral.py
test/: test_celery_strategy.py  test_sqs_strategy.py  test_state_celery_together.py  test_state_strategy.py
{{cookiecutter.project_name}}/: .config  Dockerfile  framework.py  main.py  setup.py  tox.ini
{{cookiecutter.project_name}}/framework/: __init__.py  config.py  controller.py  dispatcher.py  finisher.py  inventory.py  performer.py  robot.py  starter.py  transaction.py  utils.py
{{cookiecutter.project_name}}/modules/: make_control.py  make_flask.py  make_settings.py  make_websocket.py
{{cookiecutter.project_name}}/test/: __init__.py  test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/framework/: __init__.py  finisher.py  handler.py  robot.py  starter.py
(+64 files in other folders)
